# rtf-42nd

./: .gitattributes  .gitignore  .kodiak.toml  .prettierrc.json  AUTHORS.txt  LICENSE  README.md  build.bat  buildExtensions.bat  buildImages.bat  buildMusic.bat  buildTranslations.bat  buildUnits.bat  buildVideos.bat  convertAllMp4Files.bat  convertMp4ToOgv.bat  convertPngToPaa.bat  debug.bat  debugMultiplayer.bat  dockerInstall.ps1  go.work  hemttPhotoshoot.bat  logo_rtf42_ca.paa  mod.cpp  monitoringLogs.bat  mountDev.bat  setup.bat  sqfc.json  updateHemtt.bat
.github/: PULL_REQUEST_TEMPLATE.md  changelog_config.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  mod-conflict.md  new-animation.md
.github/PULL_REQUEST_TEMPLATE/: bug-fix.md  new-feature.md
.github/workflows/: base.yml  beta-release.yml  buildExtensions.yml  check.yml  ci.yml  lint.yml  main.yml  release.yml  updateTranslations.yml  validate.yml
.hemtt/: lints.toml  project.toml
.hemtt/presets/: main.html  rft42-mods.html
addons/animations/: $PBOPREFIX$  CfgMovesMaleSdr.hpp  CfgVehicles.hpp  XEH_PREP.hpp  config.cpp  script_component.hpp  script_macros.hpp  stringtable.xml
extensions/: Dockerfile_linux_x64.build  Dockerfile_linux_x86.build  Dockerfile_windows.build  build.ps1  buildRust.ps1  docker-entrypoint.sh  go.mod  go.sum
extensions/playmusic/: Cargo.toml  convert_linux.go  index.go  linux-dockerfile  playmusic.go
extensions/playmusic/src/: lib.rs  power_button.rs
server/: basic.cfg  server.cfg
tools/: dockerInstall.ps1  downloadFFMPEG.ps1  sqf_validator.py
(+818 files in other folders)
