[package]
name = "playmusic"
version = "1.0.0"
edition = "2021"

[dependencies]
arma-rs = "1.10.4"
soloud = "1"
process_path = "0.1.4"
fltk = { version = "^1.4", features = ["fltk-bundled"] }

[lib]
name = "playmusic"
crate-type = ["cdylib"]

[target.x86_64-unknown-linux-gnu]
dockerfile = "./linux-dockerfile"
